@@ -9,6 +9,10 @@ o Modified the entry viewer component so that it doesn't create and free a
   painter for each draw action. Instead just create the painters once and
   reuse them.
 
+o Modified the entry class so that it doesn't create and free a line
+  stripper object for each line in the entry. Instead just create the
+  stripper once and reuse it.
+
 Changes since v1.7
 ==================
 
